Implement Snowflake data source (#524)
* Implement Snowflake data source

* Add NOPCacheService

* Add temp code to avoid dependency analyze failure

* Add singleThreaded for TestConfigResource

* Add comment

* Use scope runtime to avoid dependency analyze used undeclared

* Remove unnecessary method and class

* Reduce empty line

* Edit comment

* Modify catalog to wrenai

* Fix function builder

* Add cleanup

* Modify SnowflakeSqlConverter and log level

* Fix argLine

* Modify log formatter to add class into the log

* Fix lost code #528