@@ -1,3 +1,6 @@
 python3 wren-sqlglot-server/main.py &
 
-java -Dconfig=etc/config.properties -jar $1
+# Required add-opens=java.nio=ALL-UNNAMED for Apache arrow in the Snowflake
+java -Dconfig=etc/config.properties \
+     --add-opens=java.base/java.nio=ALL-UNNAMED \
+     -jar $1
